2006-02-07  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2005-10-08  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (update_applet): correct the text in the tooltip.

2005-07-26  Jörgen Scheibengruber <mfcn@gmx.de>

	* Makefile.am: add distuninstallcheck_listfiles (See 
	http://mail.gnome.org/archives/gnome-doc-list/2003-May/msg00008.html).
	Hopefully that makes make distcheck work;
	remove omf.make xmldocs.make; add CLEANFILES DISTCLEANFILES
	* pixmaps/Makefile.am: add icons_DATA to EXTRA_DIST
	* docs/*/Makefile.am: remove "fig ="
	* remove omf.make xmldocs.make
	* update autogen.sh
	* configure.in: -> 1.13
	* Release version 1.13

2005-07-24  Jörgen Scheibengruber <mfcn@gmx.de>

	* src/backend.c: (redraw_graph): Use black as background color,
	instead of fg[NORMAL]
	* Apply patch of Benoit (makes lot of funcs static).

2005-07-14  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/backend.c:
	* src/netspeed.h: apply forgotten patch from benoit.

2005-07-09  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.c/.h: (get_default_route): added missing fclose()

2005-07-08  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (timeout_adjust_cb): make use of glib timeout functions 
	instead of deprecated gtk counterparts.

2005-06-15  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* es.po: update Spanish translation 
	(Héctor Enríquez Díaz <henrique@alumnos.ubiobio.cl>)
	
2005-06-07  Jörgen Scheibengruber <mfcn@gmx.de>

	* netspeed.c: (search_for_up_if): take device with default gw, if possible
	* backend.c/.h: add get_default_route(), (get_available_devices): use g_list_append,
	to get correctly ordered devices-list

2005-06-07  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* docs/C/figures: updated the figures.

2005-06-06  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.c: (get_available_devices): remove duplicates from the list