@@ -1,3 +1,9 @@
+2006-04-25  Jörgen Scheibengruber <mfcn@gmx.de>
+
+	* backend.(c|h): add is_no_dummy_device() and make use of it
+	* netspeed.c: make use of is_no_dummy_device() instead of checking devices
+	manually
+
 2006-02-07  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	* configure.in: Added pt_BR to ALL_LINGUAS.
